Adminer 4.16.1-dev:

Adminer 4.16.0 (released 2025-02-20):
MySQL: Fix saving bit(64) values (bug #839)
PostgreSQL: Preserve whitespace in EXPLAIN (bug #827)
PostgreSQL: Support SSL
PostgreSQL: Support altering auto_increment (bug #761)
SQLite: Fix altering forign keys (bug #841)
SQLite: Fix expressions in default values (bug #860)
MS SQL: Foreign keys in non-default schema (bug #833)
Oracle: Include tables granted by other user
MongoDB: Execute commands against the selected DB

Adminer 4.15.0:
Escape unknown field in select
HTTP drivers: Don't allow path in server name
HTTP drivers: Hide connection error message
SimpleDB: Disable XML entity loader

Adminer 4.14.0:
Use autofocus HTML attribute
PostgreSQL: Fix initial value of exported autoincrement
PostgreSQL: Fix renaming a database

Adminer 4.12.0:
Fix SQL query code direction if RTL language is used
MariaDB: Add support for UUID data type
MS SQL, MongoDB: Connect to localhost with default port if server is not specified
MongoDB: Fix parsing WHERE condition from SQL query

Adminer 4.11.0:
MySQL: Fix highlighting current table in menu on macOS
MariaDB: Fix several links to documentation pages
MS SQL: Prefix Unicode strings with 'N' so they are treated correctly

Adminer 4.10.0:
Print username next to the logout button
Do not display empty action links in main menu

Adminer 4.9.4:
Unify displaying of 'New item' action based on privileges
Firefox: Fix opening a database to the new browser's tab with Ctrl+click
Editor: Fix array conversion to string (issue adminerneo#3).
Editor: Fix building links with array parameters

Adminer 4.9.3:
MySQL, PostgreSQL: Fix queries splitting and string constants
MySQL: Fix where clause for JSON column
MySQL: Do not include unchanged PARTITION BY definition into ALTER TABLE query
MariaDB: Support current_timestamp()
PostgreSQL: Fix editing record that contains a field with GENERATED ALWAYS default value

Adminer 4.9.2:
PostgreSQL: Fix search fields configuration (regression from 4.9.0)