@@ -758,8 +758,9 @@ if (isset($_GET["sqlite"]) || isset($_GET["sqlite2"])) {
 	function show_variables() {
 		global $connection;
 		$return = array();
-		foreach (array("auto_vacuum", "cache_size", "count_changes", "default_cache_size", "empty_result_callbacks", "encoding", "foreign_keys", "full_column_names", "fullfsync", "journal_mode", "journal_size_limit", "legacy_file_format", "locking_mode", "page_size", "max_page_count", "read_uncommitted", "recursive_triggers", "reverse_unordered_selects", "secure_delete", "short_column_names", "synchronous", "temp_store", "temp_store_directory", "schema_version", "integrity_check", "quick_check") as $key) {
-			$return[$key] = $connection->result("PRAGMA $key");
+		$result = $connection->query("PRAGMA pragma_list");
+		while ($row = $result->fetch_row()) {
+			$return[$row[0]] = $connection->result("PRAGMA $row[0]");
 		}
 		return $return;
 	}
