@@ -1,4 +1,5 @@
 Adminer 4.16.1-dev:
+SQLite: Show all supported pragmas in Variables
 
 Adminer 4.16.0 (released 2025-02-20):
 MySQL: Fix saving bit(64) values (bug #839)
